--- a/src/pages/ProductDetail/components/PriceCalculator.scss
+++ b/src/pages/ProductDetail/components/PriceCalculator.scss
@@ -24,17 +24,21 @@
     height: 34px;
     border: 1px solid $grey-color;
 
-    &-button {
+    &-minus-button,
+    &-plus-button {
       width: 34px;
       height: 100%;
+      margin: 0px;
       border-style: none;
     }
     &-input {
       width: 44px;
-      height: 100%;
+      height: 10px;
+      padding: 0px;
       border-style: none;
       text-align: center;
     }
+
     input[type='number']::-webkit-inner-spin-button,
     input[type='number']::-webkit-outer-spin-button {
       -webkit-appearance: none;
